# Hive-Game

./: .gitignore  Alicloudapi.cpp  Alicloudapi.h  Board.cpp  Board.h  BoardUI.cpp  BoardUI.h  CMakeLists.txt  Game.cpp  Game.h  GameWindow.cpp  GameWindow.h  HexagonWidget.cpp  HexagonWidget.h  MCTS.cpp  MCTS.h  Piece.cpp  Player.cpp  Player.h  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc  ruleswindow.cpp  ruleswindow.h
doc/: rule.html  rule.md
include/: Board.h  Error.h  Game.h  Piece.h  Player.h  include.h
qss/: GameWindows.qss  mainwindows.qss  rulewindows.qss
src/: Board.cpp  Error.cpp  Game.cpp  main.cpp
